--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "next-react-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "date-fns": "^2.29.3",
-    "html-react-parser": "^3.0.4",
-    "html-to-text": "^8.2.1",
-    "microcms-js-sdk": "^2.2.1",
-    "next": "12.3.1",
-    "plaiceholder": "^2.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.55.0",
-    "sharp": "^0.31.2"
-  },
-  "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "^8.5.0"
-  }
+	"name": "next-react-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next export",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.2.0",
+		"@fortawesome/free-brands-svg-icons": "^6.2.0",
+		"@fortawesome/free-regular-svg-icons": "^6.2.0",
+		"@fortawesome/free-solid-svg-icons": "^6.2.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"date-fns": "^2.29.3",
+		"html-react-parser": "^3.0.4",
+		"html-to-text": "^8.2.1",
+		"microcms-js-sdk": "^2.2.1",
+		"next": "12.3.1",
+		"plaiceholder": "^2.5.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sass": "^1.55.0",
+		"sharp": "^0.31.2"
+	},
+	"devDependencies": {
+		"eslint": "8.23.1",
+		"eslint-config-next": "12.3.1",
+		"eslint-config-prettier": "^8.5.0"
+	}
 }
